# FronTierCpp

./: .gitignore  .gitmodules  Makefile.am  README  autogen.sh  build  build.sh  configure.ac  manifest.py
AngStiff_sprModel/: Makefile.am  NOTES.txt  afcnpy.cpp  afdata.cpp  afprop.cpp  afsetd.cpp  aftest.cpp  afvelo.cpp  airfoil.h  airfoil_sv.h  modules.cpp  spring.cpp  state.h
BVH/: BVH.cpp  BVH.h  BVH_Node.cpp  BVH_Node.h  BVH_Visualization.cpp  BVH_util.cpp  BVH_util.h  BV_Point.h  BoundingVolume.cpp  BoundingVolume.h  CGAL_Point.cpp  CGAL_Point.h  CGALmesh2FTsurf.cpp  CramersRule2d.h  HyperSurfElement.cpp  HyperSurfElement.h  LSQ.h  Makefile.am  OFF2FTsurf.cpp  Query.cpp  cloth.cpp  in-ball-ball  in-box-ball  in-box-box  iohelpers.cpp  mkdir.cpp
CGAL_Interface/: Makefile.am  cgal_capsule_intfc_test.cpp  cgal_cylindrical_shell.cpp  cgal_intfc.cpp  cgal_intfc.h  cgal_surf.h
Collision/: AABB.cpp  AABB.cpp-save  AABB.h  AABB.h-save  CD_HSE.cpp  CD_HSE.h  FabricManager.cpp  FabricManager.h  Makefile.am  VelocityUpdate.cpp  cdinit.cpp  collid.h  dcollid.cpp  dcollid.cpp-save  dcollid3d.cpp  filecheck.cpp  filecheck.h  gridcollid.cpp  gridcollid.h  test.cpp  vtk.cpp
FrontWrapper/: FrontWrapper.cpp  FrontWrapper.h  Makefile.am  example00.cpp
airfoil/: FabricManager.cpp  FabricManager.h  Makefile.am  afcnpy.cpp  afdata.cpp  afinit.cpp  afinit3d.cpp  afprop.cpp  afsetd.cpp  afstat.cpp  aftest.cpp  afvelo.cpp  airfoil.cpp  airfoil.h  airfoil_data.cpp  airfoil_gpu.cu  airfoil_gpu.cuh  airfoil_sv.h  bending.cpp  bending.h  cgal.cpp  in-ball-fabric-10pct  in-ball-fabric-3pct  in-fabric-on-ball  in-fabric-on-ball-opt20  in-fabric-on-ball-opt20-1  in-fabric-on-ball-opt20_crash  in-fabric-poro  in-fabric-poro-10pct  in-fabric-poro-pm2  in-globaltri-test  in-sphere-fall  in-sphere-fall-down  in-sphere-fall-up  in-string-air  in-string-air-1  in-string-air-bendforce  in-string-air-nostrainlim  in-string-air-nostrainlimit  in-string-air-strainlimiting  (+6 more)
angstiff_airfoil/: FabricManager.h  Makefile.am  afsetd.cpp  airfoil_sv.h
cAirfoil/: CD_HSE.h  Makefile.am  afcnpy.cpp  afinit.cpp  afinit3d.cpp  afprop.cpp  afsetd.cpp  aftest.cpp  afvelo.cpp  cFabric.cpp  cFabric.h  cFbasic.cpp  cFluid_test.cpp  cgal.cpp  dcollid.cpp  fabric.h  fabric_api.cpp  modules.cpp
cFluid/: Makefile.am  cFbase.cpp  cFcartsn.cpp  cFeos.cpp  cFinit.cpp  cFluid.cpp  cFluid.h  cFphys.cpp  cFsub.cpp  cFturb.cpp  cFturb.h  cFtvd.cpp  cFvisc.cpp  cFvisc.h  cFvisualization.cpp  cFweno-save.cpp  cFweno.cpp  cFweno_gpu.cuh  in-DGB-capsule-only-inviscid-subscale-2pct-coarse  in-DGB-capsule-only-vremansgs-subscale-2pct  in-DGB-capsule-only-vremansgs-subscale-2pct-coarse  in-NACA0012  in-ball3d-CGAL  in-ball3d-CGAL-eddyvisc-ftsides  in-ball3d-CGAL-flowthrusides  in-ball3d-CGAL-v1  in-ball3d-CGAL-vertical  in-ball3d-heatflux-nosgs-ftsides  in-ball3d-heatflux-nosgs-ftsides-coarse  in-ball3d-heatflux-vreman-ftsides  in-ball3d-heatflux-vreman-ftsides-coarse  in-ball3d-heatflux-vreman-ftsides-coarse-mach  in-ball3d-vreman-ftsides-ssoutlet-Mach2.0  in-ball3d-vreman-ftsides-validation  in-ball3d-vremansgs-farfieldsides  in-ball3d-vremansgs-flowthrusides-x2  in-ball3d-vtk-test  in-cyl2d  in-cyl2d-NEW  in-cyl2d-NEW-initvelo  (+85 more)
cairfoil/: .afvelo.cpp.swo  CD_HSE.h  FabricManager.cpp  FabricManager.h  Makefile.am  SAVE-afdata.cpp  afcnpy.cpp  afdata.cpp  afinit.cpp  afinit3d.cpp  afprop.cpp  afsetd.cpp  afstat.cpp  afvelo.cpp  airfoil.cpp  airfoil.h  airfoil_sv.h  bending.cpp  cFabric-DARCY.cpp  cFabric.cpp  cFabric.h  cairfoil-coatintfc-dev.cpp  cairfoil-old.cpp  cairfoil.cpp  cgal.cpp  collid.h  dcollid.cpp  dcollid3d.cpp  dgb-cgal.cpp  in-10pct-DARCY-IMPERMEABLE-rigid-supercoarse-initvel  in-10pct-DARCY-rigid-supercoarse  in-10pct-DARCY-rigid-supercoarse-initvel  in-10pct-DARCY-rigid-supercoarse-initvel-inviscid  in-10pct-DARCY-rigid-supercoarse-initvel-inviscid-rgb  in-10pct-DARCY-supercoarse  in-10pct-DARCY-supercoarse-initvel  in-10pct-DARCY-supercoarse-initvel-inviscid  in-10pct-DARCY-supercoarse-initvel-inviscid-rgb  in-10pct-DARCY-supercoarse-initvel-subsonic  in-10pct-DARCY-supercoarse-initvel-subsonic-new  (+68 more)
crystal/: Makefile.am  ccartsn.cpp  crystal.cpp  crystal.h  crystal_state.h  crysub.cpp
example2d/: Makefile  Makefile.am  example00.cpp  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example10.cpp  example11.cpp  example12.cpp  example13.cpp  example14.cpp
example3d/: Makefile.am  example00.cpp  example01.cpp  example07.cpp
fabric/: AABB.cpp  AABB.h  AABB_Node.cpp  AABB_Node.h  AABB_Tree.cpp  AABB_Tree.h  CD_HSE.cpp  CD_HSE.h  ImpactZone.cpp  Impulse.cpp  Makefile.am  NOTES.txt  NewAABB.cpp  NewAABB.h  Node.cpp  Node.h  Proximity.cpp  Proximity.h  README  Tearing.cpp  Tearing.h  TearingTester.cpp  afcnpy.cpp  afdata.cpp  afinit.cpp  afinit3d.cpp  afprop.cpp  afsetd.cpp  aftest.cpp  afvelo.cpp  airfoil.cpp  airfoil.h  airfoil_sv.h  bending.cpp  bending.h  cgal.cpp  cgal_intfc.cpp  cgal_intfc.h  cgal_intfc_test.cpp  collid.h  (+76 more)
folding/: Makefile.am  Makefile.in.oldbuild  NOTES.txt  OldMakefile  bending.cpp  bending.h  cgal.cpp  cgal.h  di_spring_solver.cpp  drag.cpp  drag.h  ex_spring_solver.cpp  folding.cpp  folding.h  folding_helper.cpp  im_spring_solver.cpp  mrun  origami.cpp  origami.h  spring_solver.cpp  spring_solver.h  test.cpp
iFluid/: .iFbasic.cpp.swo  Makefile.am  SA.cpp  SA.h  changes  cyl2d-vreman.sh  iFbasic.cpp  iFcartsn2d.cpp  iFcartsn3d-new-poro.cpp  iFcartsn3d.cpp  iFdata.cpp  iFdata.h  iFdualgrid.cpp  iFinit.cpp  iFinjection.cpp  iFinjection.h  iFluid.cpp  iFluid.h  iFluid_data2d.cpp  iFluid_data2d_intfc.cpp  iFluid_data3d.cpp  iFstats.cpp  iFsub.cpp  iFturb.cpp  iFturb.h  iFvisualize.cpp  iRANS.h  ifluid_state.h  in-RNG  in-STD  in-ball-init  in-ball3d-CGAL-MOIN  in-ball3d-CGAL-RNG  in-ball3d-CGAL-RNG-nonp  in-ball3d-CGAL-VREMAN  in-ball3d-CGAL-VREMAN-extrapadv  in-ball3d-CGAL-VREMAN-falling  in-ball3d-CGAL-VREMAN-noslip  in-ball3d-CGAL-VREMAN-z  in-ball3d-CGAL-VREMAN_flothru_sides  (+69 more)
lib/: Makefile.am  (+1 more)
(+1555 files in other folders)
